--- a/data_extract/01_pdf转html/pdf2html/pom.xml
+++ b/data_extract/01_pdf转html/pdf2html/pom.xml
@@ -77,7 +77,7 @@
                 <artifactId>maven-assembly-plugin</artifactId>
                 <configuration>
                     <descriptors>
-                        <descriptor>src\main\resources\assembly.xml</descriptor>
+			    <descriptor>src/main/resources/assembly.xml</descriptor>
                     </descriptors>
 <!--                                        <archive>-->
 <!--                                            <manifest>-->
